--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "license": "ISC",
     "dependencies": {
         "body-parser": "^1.20.1",
-        "express": "^4.18.2"
+        "express": "^4.18.2",
+        "firebase-admin": "^11.4.1"
     },
     "devDependencies": {
         "nodemon": "^2.0.20"
