--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "dependencies": {
         "body-parser": "^1.20.1",
         "express": "^4.18.2",
-        "firebase-admin": "^11.4.1"
+        "firebase-admin": "^11.4.1",
+        "mongoose": "^6.8.1"
     },
     "devDependencies": {
         "nodemon": "^2.0.20"
